--- a/style.css
+++ b/style.css
@@ -52,7 +52,13 @@ html {
   min-height: 100vh;
   background-color: #262626 !important;
   overflow: hidden;
+  
+  
+  
 }
+
+
+
 body {
   background-color: #262626;
 }
@@ -210,3 +216,29 @@ body {
   font-size: 100px;
 }
 
+Custom styles for the map
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.map-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.map-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+}
